fix: star-chart on mobile

--- a/src/components/user/star-chart/star-chart.module.scss
+++ b/src/components/user/star-chart/star-chart.module.scss
@@ -3,3 +3,12 @@
 .label {
     color: $theme-text !important;
 }
+
+.container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 50%;
+  height: 400px;
+}
